# partial

./: Cargo.toml
composite-derive/: Cargo.toml
composite-derive/src/: lib.rs
composite-tests/: Cargo.toml
composite-tests/src/: lib.rs
composite-traits/: Cargo.toml
composite-traits/src/: lib.rs
derive-partial/: Cargo.toml
derive-partial/src/: lib.rs
partial-derive/: Cargo.toml
partial-derive/src/: lib.rs
partial-tests/: Cargo.toml
partial-tests/src/: main.rs
partial-traits/: Cargo.toml
partial-traits/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs
