[workspace]
members = ["derive-partial", "partial-traits", "tests"]
default_member = "tests"
edition = "2024"
resolver = "3"

[workspace.dependencies]
darling = { version = "0.23.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.117", features = ["full"] }
