[workspace]
members = ["composite-tests", "composite-derive", "composite-traits"]
default_member = "composite-tests"
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]

composite-derive = { path = "./composite-derive" }
composite-tests = { path = "./composite-tests" }
composite-traits = { path = "./composite-traits" }

darling = { version = "0.23.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.117", features = ["full"] }
