[package]
name = "partial-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
partial-derive = { path = "../partial-derive" }
partial-traits = { path = "../partial-traits" }

darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
serde_json = "1.0.149"
